# aminorino-workspace

./: .gitignore  AMINORINO_TO_CORTEXIA_MIGRATION.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  IEEE_PAPER_UPDATES_COMPLETED.md  IEEE_PAPER_UPDATE_PROPOSAL.md  LICENSE-MIT  PRACTICAL_CONSTRAINTS.md  PROJECT_SUMMARY.md  PUBLICATION_STATUS.md  PUBLISHING.md  PUBLISH_GUIDE.md  QUICK_PUBLISH.md  README.md  REPRODUCIBILITY.md  RESUMEN_EJECUTIVO.md  ROADMAP_v0.2.0.md  UNIFIED_SYNTHESIS_REPORT.md  commit_to_github.sh  compile_and_publish.sh  consciousness_experiment_results.json  consciousness_maximum_entanglement_results.json  consciousness_with_noise_results.json  generate_ieee_figures.py  install.sh  publish.sh  publish_remaining.sh  quick_publish.sh  test_compile.sh
Articulos-IEEE/: README.md
Articulos-IEEE/Cortexia/Brain-AI-Native/: ROADMAP.md
Articulos-IEEE/Cortexia/Brain-AI-Native/PhiQ_MajorThan_PhiClassical/: BUG_REPORT_Phi_Calculation.md  EXPERIMENTAL_VARIABLES.md  EXPERIMENT_METADATA.yaml  Empirical_Test_Quantum_Consciousness.md  IEEE_Paper_Generator.ipynb  README.md  Reproducibility_Report.ipynb
Articulos-IEEE/Cortexia/Overview/: CORTEXIA_Development_Process.md
aminorino/: Cargo.toml
aminorino/src/: lib.rs
brain-ai-native/: Cargo.toml  README.md  consciousness_dynamic_monitoring.csv  consciousness_experiment_results.json  consciousness_maximum_entanglement_results.json  consciousness_substrates_results.json  consciousness_validation_n50_results.json  consciousness_with_noise_results.json
brain-ai-native/examples/: consciousness_experiment.rs  consciousness_maximum_entanglement.rs  consciousness_noise_sweep_fine.rs  consciousness_substrates.rs  consciousness_substrates_dynamic.rs  consciousness_validation_n50.rs  consciousness_with_noise.rs  debug_phi_calculation.rs  debug_tpm_phi.rs  quantum_phi_demonstration.rs
brain-ai-native/src/: consciousness.rs  core.rs  experiments.rs  lib.rs
brain-ai-native/src/brain/: biological_brain.rs  hybrid_brain.rs  mod.rs  quantum_brain.rs
brain-ai-native/src/consciousness/: cross_substrate.rs  mod.rs  phi_measurement.rs  quantum_phi.rs
brain-ai-native/tests/: proprietary_validation_suite.rs
cortexia/: Cargo.toml  README.md
cortexia/src/: lib.rs
funding-strategy/: README.md
funding-strategy/grants/: Grant-Timeline.md  NIH-R21-Strategy.md
funding-strategy/sessions/: 2025-01-13-R21-Discussion.md
funding-strategy/validation/: Public-Datasets.md
hodgkin-huxley/: Cargo.toml  README.md
hodgkin-huxley/benches/: neuron_bench.rs
hodgkin-huxley/examples/: neuron_comparison.rs
hodgkin-huxley/src/: constants.rs  solvers.rs
iit/: Cargo.toml  IMPLEMENTATION.md  README.md
iit/benches/: phi_bench.rs
iit/examples/: basic_usage.rs
iit/src/: concepts.rs  emd.rs  lib.rs  partition.rs  phi.rs  repertoire.rs
neural-dynamics/: Cargo.toml
neural-dynamics/src/: connectivity.rs  error.rs  lib.rs  population.rs  projection.rs  stimulation.rs
papers/: paper_-1_conceptual_design_substrates.md  paper_0_iit_implementation.md  paper_1_maximum_phi_quantum.md  paper_2_cross_substrate_consciousness.md
papers_preview/: CITATION.cff  INCEPTION_PROTOCOL_NOTES.md  OBJECTIONS_RESOLVED.md  PROGRESS_REPORT.md  QUICK_ACCESS.md  README.md  RESOLUTION_STATUS.md  STATUS_SUMMARY.md  SUBMISSION_READINESS_FINAL.md  ZENODO_INTEGRATION_GUIDE.md
papers_preview/paper1_hierarchical_phi/: README.md  README_MODERATED.md
papers_preview/paper2_nos_partes_1_2/: README.md  README_MODERATED.md
papers_preview/paper3_topological_password/: README.md  README_MODERATED.md
papers_preview/paper4_neuroplastic_os/: README.md  README_MODERATED.md
papers_preview/paper5_calculo_significados/: README.md  README_MODERATED.md  generate_figures.py
papers_preview/paper6_rust_iit_library/: README.md  README_MODERATED.md  paper.bib  paper.md
quantum-processor/: Cargo.toml  README.md
quantum-processor/src/: lib.rs
quantum-processor/src/architecture/: mod.rs
quantum-processor/src/circuits/: mod.rs
quantum-processor/src/error_correction/: ldpc.rs  mod.rs
quantum-processor/src/gates/: mod.rs
quantum-processor/src/lisp_interface/: mod.rs
quantum-processor/src/monitoring/: mod.rs
quantum-processor/src/quantum_reservoir/: mod.rs
quantum-processor/src/qubits/: mod.rs
quantum-processor/src/radiation/: mod.rs
synapse-models/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
synapse-models/examples/: basic_synapse.rs
synapse-models/src/: calcium.rs  error.rs  lib.rs  network.rs  plasticity.rs  receptor.rs  synapse.rs
tda/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION.md
tda/src/: distances.rs  lib.rs  mapper.rs  neural_tda.rs  persistence_diagram.rs  persistent_homology.rs  simplicial_complex.rs
