[package]
name = "brain-ai-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-Native Brain architecture using quantum processor substrate for consciousness modeling"
keywords = ["quantum", "consciousness", "iit", "brain", "ai"]
categories = ["science", "simulation"]

[dependencies]
# Workspace crates
quantum-processor = { path = "../quantum-processor", features = ["reservoir", "radiation", "ldpc"] }
iit = { path = "../iit" }
neural-dynamics = { path = "../neural-dynamics" }
hodgkin-huxley = { path = "../hodgkin-huxley" }

# Core numeric libraries
num-complex = { version = "0.4", features = ["serde"] }
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.32"

# Random and distributions
rand = "0.8"
rand_distr = "0.4"

# Graph algorithms
petgraph = "0.6"

# Parallel computation
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Time
chrono = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
experimental = []
