[package]
name = "brain-ai-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-Native Brain (CORTEXIA Framework): Quantum consciousness research with IIT, cross-substrate comparison, and statistical validation"
keywords = ["quantum", "consciousness", "iit", "cortexia", "aminorino"]
categories = ["science", "simulation"]

[dependencies]
# Workspace crates
quantum-processor = { path = "../quantum-processor", features = ["reservoir", "radiation", "ldpc"] }
iit = { path = "../iit" }
neural-dynamics = { path = "../neural-dynamics" }
hodgkin-huxley = { path = "../hodgkin-huxley" }

# Core numeric libraries
num-complex = { version = "0.4", features = ["serde"] }
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.32"

# Random and distributions
rand = "0.8"
rand_distr = "0.4"

# Graph algorithms
petgraph = "0.6"

# Parallel computation
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI (for bin/cortexia.rs)
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"

# Time
chrono = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
experimental = []

[[example]]
name = "consciousness_substrates_dynamic"
path = "examples/consciousness_substrates_dynamic.rs"
