[package]
name = "iit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/aminorino/iit"
description = "Complete Integrated Information Theory (IIT) 3.0 library for calculating Phi and analyzing consciousness in neural systems"
keywords = ["neuroscience", "consciousness", "integrated-information", "phi", "iit"]
categories = ["science", "algorithms"]
readme = "README.md"

[dependencies]
nalgebra = { workspace = true }
ndarray = { workspace = true }
num-complex = { workspace = true }
statrs = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
itertools = "0.13"
lru = "0.12"

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "phi_bench"
harness = false

[lib]
name = "iit"
path = "src/lib.rs"
