[package]
name = "tda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nalgebra = "0.33"
petgraph = "0.6"
rayon = "1.8"
itertools = "0.12"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
